# freeswitch

./: Makefile.am  configure.ac  freeswitch-sounds-en-ca-june.spec  freeswitch-sounds-fr-ca-june.spec  freeswitch-sounds-music.spec  freeswitch-sounds-pt-BR-karina.spec  freeswitch-sounds-ru-RU-elena.spec  freeswitch.spec
conf/vanilla/: network-tones.xml
debian/: freeswitch-systemd.freeswitch.service
libs/apr/: configure.ac
libs/apr-util/: configure.ac
libs/broadvoice/: configure.ac
libs/esl/: ivrd.c
libs/iksemel/: configure.ac
libs/ilbc/: configure.ac
libs/libdingaling/: configure.ac
libs/libsndfile/: configure.ac
libs/sofia-sip/: configure.ac
libs/spandsp/: configure.ac
libs/srtp/: configure.ac
libs/tiff-4.0.2/: configure.ac
src/: switch_apr.c  switch_channel.c  switch_channel_filter.c  switch_core.c  switch_core_codec.c  switch_core_db.c  switch_core_file.c  switch_core_media.c  switch_core_media_bug.c  switch_core_session.c  switch_core_sqldb.c  switch_core_state_machine.c  switch_cpp.cpp  switch_event.c  switch_ivr.c  switch_ivr_async.c  switch_ivr_bridge.c  switch_ivr_originate.c  switch_ivr_play_say.c  switch_loadable_module.c  switch_odbc.c  switch_pcm.c  switch_pgsql.c  switch_rtp.c  switch_utils.c  switch_xml.c
src/include/: switch.h  switch_apr.h  switch_channel.h  switch_channel_filter.h  (+12 more)
src/mod/applications/mod_usrloc/: Makefile.am  mod_usrloc.c
src/mod/applications/mod_usrloc/conf/autoload_configs/: usrloc.conf.xml
src/mod/applications/mod_usrloc/conf/dialplan/: usrloc.xml
src/mod/codecs/mod_mpa/: Makefile.am  mod_mpa.c
(+108 files in other folders)
